# deriva-skills

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: release-drafter.yml
.github/workflows/: release.yml
evals/manage-vocabulary/: trigger-eval.json
scripts/: audit_catalog_health.py
skills/api-naming-conventions/: SKILL.md
skills/audit-catalog-health/: SKILL.md
skills/browse-erd/: SKILL.md
skills/catalog-operations-workflow/: SKILL.md
skills/check-deriva-ml-versions/: SKILL.md
skills/check-deriva-versions/: SKILL.md
skills/check-versions/: SKILL.md
skills/coding-guidelines/: SKILL.md
skills/configure-experiment/: SKILL.md
skills/create-dataset/: SKILL.md
skills/create-feature/: SKILL.md
skills/create-feature-workspace/: trigger-eval.json
skills/create-table/: SKILL.md
skills/create-web-app/: SKILL.md
skills/customize-display/: SKILL.md
skills/dataset-lifecycle/: SKILL.md
skills/dataset-lifecycle-workspace/: trigger-eval-optimized.json  trigger-eval.json
skills/dataset-versioning/: SKILL.md
skills/debug-bag-contents/: SKILL.md
skills/deriva-context/: SKILL.md
skills/download-bag/: SKILL.md
skills/entity-naming/: SKILL.md
skills/evolve-schema/: SKILL.md
skills/execution-lifecycle/: SKILL.md
skills/execution-lifecycle-workspace/: trigger-eval.json
skills/generate-descriptions/: SKILL.md
skills/generate-scripts/: SKILL.md
skills/getting-started/: SKILL.md
skills/help/: SKILL.md
skills/load-data/: SKILL.md
skills/maintain-experiment-notes/: SKILL.md
skills/manage-storage/: SKILL.md
skills/manage-vocabulary/: SKILL.md
skills/ml-data-engineering/: SKILL.md
skills/model-development-workflow/: SKILL.md
skills/new-model/: SKILL.md
skills/optimization/: api-naming-conventions-evals.json  catalog-operations-workflow-evals.json  coding-guidelines-evals.json  configure-experiment-evals.json  create-dataset-evals.json  create-feature-evals.json  run_all.py  (+22 more)
tests/: conftest.py  test_subset_filters.py
(+154 files in other folders)
