[project]
name = "deriva-skills"
version = "0.12.2"
requires-python = ">=3.12"

[dependency-groups]
dev = ["deriva-ml"]

[tool.uv.sources]
deriva-ml = { git = "https://github.com/informatics-isi-edu/deriva-ml.git" }

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
message = "Bump version: {current_version} → {new_version}"
post_commit_hooks = ["git push", "git push --tags"]
